drag-n-drop files support, based on patch from Corion (Max Maischein)
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1014 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -14,6 +14,7 @@ Changes for Padre.
     Hide/show white spaces and tabs (JQUELIN)
     Check minimum App::Ack version (JQUELIN)
     Selection markers to ease selection (JQUELIN)
+    Drag-n-drop files from Filer Explorer (CORION)
 
 0.16 2008.11.09
 
