fix ticket #55: recognize when file is changed on disk
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1036 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Padre.
 
+    Recognize when file is changed on disk (#55) (JQUELIN)
+
 0.17 2008.11.17
 
     Optional highlighting of current line (via background color) (HJANSEN)
