--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Padre.
 
     Recognize when file is changed on disk (#55) (JQUELIN)
+    Un/Comment now filetype-dependant (#26) (JQUELIN)
 
 0.17 2008.11.17
 
