--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Changes for Padre.
 
     Recognize when file is changed on disk (#55) (JQUELIN)
     Un/Comment now filetype-dependant (#26) (JQUELIN)
+    Moving the vi keybinding code to a Plugin (SZABGAB)
 
 0.17 2008.11.17
 
