--- a/Changes
+++ b/Changes
@@ -14,6 +14,7 @@ Changes for Padre.
     Moving the vi keybinding code to a Plugin (SZABGAB)
     Jump to the last open window using menu or Ctrl-6 (#137) (SZABGAB)
     Hide the margin of the syntax checker when it is not in use. (SZABGAB)
+    Save-as updates the window menu (#145) (JQUELIN)
 
 0.17 2008.11.17
 
