fix ticket #42: drag and drop file(s) open them
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1066 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -15,6 +15,7 @@ Changes for Padre.
     Jump to the last open window using menu or Ctrl-6 (#137) (SZABGAB)
     Hide the margin of the syntax checker when it is not in use. (SZABGAB)
     Save-as updates the window menu (#145) (JQUELIN)
+    Drag and drop file(s) open them (#42) (SZABGAB,JQUELIN)
 
 0.17 2008.11.17
 
