fix ticket #79: padre --index no longer crashes
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1067 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -16,6 +16,7 @@ Changes for Padre.
     Hide the margin of the syntax checker when it is not in use. (SZABGAB)
     Save-as updates the window menu (#145) (JQUELIN)
     Drag and drop file(s) open them (#42) (SZABGAB,JQUELIN)
+    padre --index no longer crashes (#79) (JQUELIN)
 
 0.17 2008.11.17
 
