added new feature
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1153 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -17,6 +17,7 @@ Changes for Padre.
     Save-as updates the window menu (#145) (JQUELIN)
     Drag and drop file(s) open them (#42) (SZABGAB,JQUELIN)
     padre --index no longer crashes (#79) (JQUELIN)
+    Incremental, non-intrusive search a-la Firefox (#60) (JQUELIN)
 
 0.17 2008.11.17
 
