Converting a bunch of stuff to Wx::gettext
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1211 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/HACKING.txt
+++ b/HACKING.txt
@@ -20,7 +20,7 @@ release.pl  Used to release  Padre.
 Translation files
 -----------------
 
-Currently we are using gettext so we have a po file for each additional
+Currently we are using Wx::gettext so we have a po file for each additional
 language (currently only German) in the share/locale/ directory.
 
 Before release the release.pl script generates an mo file using
