update the Changes file
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1365 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Changes for Padre.
 
+   Korean translation added
+   Hungarian translation added
+   Hebrew translation added
+   Improvement in vi PLugin
+
 0.18 2008.11.23
 
     Added a few more directories to the no_index list in Build.PL (ADAMK)
