Mention recent changes by me
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1389 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Changes for Padre.
    Hungarian translation added
    Hebrew translation added
    Improvement in vi PLugin
+   Locale switching no longer needs a restart (HJANSEN)
+   Moved syntax checking out from experimental state (HJANSEN)
 
 0.18 2008.11.23
 
