--- a/Changes
+++ b/Changes
@@ -1,11 +1,15 @@
 Changes for Padre.
 
-   Korean translation added
-   Hungarian translation added
-   Hebrew translation added
-   Improvement in vi PLugin
-   Locale switching no longer needs a restart (HJANSEN)
-   Moved syntax checking out from experimental state (HJANSEN)
+    Korean translation added (KEEDI)
+    Hungarian translation added (GYU)
+    Hebrew translation added (Omer Zak)
+    Improvement in vi Plugin (SZABGAB)
+    Locale switching no longer needs a restart (HJANSEN)
+    Moved syntax checking out from experimental state (HJANSEN)
+    Prototype of printing support (HJANSEN)
+    Adding support for document type registration (ADAMK)
+    Adding plugin_name to the Padre::Plugin API (ADAMK)
+    Advancing the version numbers of some prereqs (ADAMK)
 
 0.18 2008.11.23
 
