set version numbers to 0.19 prior to release
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1418 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Padre.
 
+0.19 2008.11.28
+
     Korean translation added (KEEDI)
     Hungarian translation added (GYU)
     Hebrew translation added (Omer Zak)
@@ -10,6 +12,7 @@ Changes for Padre.
     Adding support for document type registration (ADAMK)
     Adding plugin_name to the Padre::Plugin API (ADAMK)
     Advancing the version numbers of some prereqs (ADAMK)
+    Save files in the same encoding as they were read.
 
 0.18 2008.11.23
 
