--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Changes for Padre.
 
+    Separate tab-width from indentation-level preference (SMUELLER)
+    Expend auto-detection of indentation style to include the
+        indentation level (SMUELLER)
+    Apply automatic tab-compression if tab-indentation is used with
+        an indentation-width != tab-width (SMUELLER)
+    Reworked the autoindentation: Now with auto-de-indentation on
+        closing brace (SMUELLER)
+
 0.19 2008.11.28
 
     Korean translation added (KEEDI)
@@ -234,7 +242,7 @@ v0.07 2008.09.04
     Separate code to Padre::Wx::Menu, Padre::Wx::Execute, Padre::Wx::Help
     Allow spliting windows to see two parts of the same document
     Add Zoom-in/Zoom-out/Zoom-reset menu options to change the zoom on all documents
-    Allow the use of PAR files as plugins (TSEE)
+    Allow the use of PAR files as plugins (SMUELLER)
     Stop jumping on selection movement in the list of methods frame.
     Remove Padre::Demo and distribute it separately as Wx::Perl::Dialog. Make Padre depend on it.
     Update the status when the mouse is moved 
