--- a/Changes
+++ b/Changes
@@ -12,6 +12,7 @@ Changes for Padre.
         Padre::Wx::SyntaxChecker (SMUELLER)
     Small improvement to startup time by not refreshing the plugin
         menu after loading each plugin (SMUELLER)
+    French translation added (JQUELIN)
 
 0.19 2008.11.28
 
