update changes file
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1536 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Padre.
 
+   Italian translation (SBLANDIN)
+
 0.20 2008.12.02
 
     Separate tab-width from indentation-level preference (SMUELLER)
