Show methods in abc order. Allow user to set preference to 'abc' or 'original' ordering of methods. (#163)
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1543 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Changes for Padre.
 
-   Italian translation (SBLANDIN)
+    Italian translation (SBLANDIN)
+    Show methods in abc order. Allow user to set preference to 'abc' or 'original'
+       ordering of methods. (#163) (SZABGAB)
 
 v0.20 2008.12.02
 
