--- a/share/locale/ko.po
+++ b/share/locale/ko.po
@@ -128,8 +128,8 @@ msgid "E&xperimental"
 msgstr "실험적인 기능(&X)"
 
 #: ../../lib/Padre/Wx/Menu.pm:237
-msgid "&New\tCtrl-N"
-msgstr "새로 만들기(N)\tCtrl-N"
+msgid "&New"
+msgstr "새로 만들기(N)"
 
 #: ../../lib/Padre/Wx/Menu.pm:245
 msgid "New..."
@@ -140,16 +140,16 @@ msgid "Perl Distribution (Module::Starter)"
 msgstr "펄 배포 (Module::Starter)"
 
 #: ../../lib/Padre/Wx/Menu.pm:253
-msgid "&Open...\tCtrl-O"
-msgstr "열기(&O)...\tCtrl-O"
+msgid "&Open..."
+msgstr "열기(&O)..."
 
 #: ../../lib/Padre/Wx/Menu.pm:257
 msgid "Open Selection\tCtrl-Shift-O"
 msgstr "선택한 이름의 파일 열기\tCtrl-Shift-O"
 
 #: ../../lib/Padre/Wx/Menu.pm:261
-msgid "&Close\tCtrl-W"
-msgstr "닫기(&C)\tCtrl-W"
+msgid "&Close"
+msgstr "닫기(&C)"
 
 #: ../../lib/Padre/Wx/Menu.pm:267
 msgid "Close All"
@@ -162,10 +162,6 @@ msgstr "현재 문서를 제외하고 모두 닫기"
 #: ../../lib/Padre/Wx/Menu.pm:278
 msgid "Reload file"
 msgstr "파일을 다시 불러오기"
-
-#: ../../lib/Padre/Wx/Menu.pm:286
-msgid "&Save\tCtrl-S"
-msgstr "저장(&S)\tCtrl-S"
 
 #: ../../lib/Padre/Wx/Menu.pm:291
 msgid "Save &As..."
@@ -212,8 +208,8 @@ msgid "Doc Stats"
 msgstr "문서 정보"
 
 #: ../../lib/Padre/Wx/Menu.pm:376
-msgid "&Quit\tCtrl-Q"
-msgstr "끝내기(&Q)\tCtrl-Q"
+msgid "&Quit"
+msgstr "끝내기(&Q)"
 
 #: ../../lib/Padre/Wx/Menu.pm:403
 msgid "Select"
@@ -951,3 +947,27 @@ msgstr "완료"
 #, perl-format
 msgid " Unsaved %d"
 msgstr " 저장하지 않은 문서 %d"
+
+msgid "Not yet available"
+msgstr "아직 사용할 수 없습니다"
+
+msgid "&Undo"
+msgstr "되돌리기(&U)"
+
+msgid "&Redo"
+msgstr "다시 실행(&R)"
+
+msgid "&Copy"
+msgstr "복사(&C)"
+
+msgid "Cu&t"
+msgstr "잘라내기(&T)"
+
+msgid "&Paste"
+msgstr "붙여 넣기(&P)"
+
+msgid "&Find"
+msgstr "찾기(&F)"
+
+msgid "&About"
+msgstr "정보(&A)"
