threading was sadly missing from the changes so far
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1644 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes for Padre.
 
+    Experimental implementation of the Padre::TaskManager thread pool
+       and Padre::Task background-task-interface for running blocking
+       tasks in additional threads. (SMUELLER)
     Italian translation (SBLANDIN)
     Show methods in abc order. Allow user to set preference to 'abc' or 'original'
        ordering of methods. (#163) (SZABGAB)
