--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes for Padre.
 
+    Default to showing functions in alphabetical order. (SMUELLER)
+    Option to show functions in alphabetical order, except private methods
+        go last. (SMUELLER)
+    A bunch of autoindentation fixes. (SMUELLER)
     AUI updates to the syntax-checker/output-window GUI elements (HJANSEN)
     Add new Perl-specific feature: "Jump to variable declaration"
         and the experimental "replace lexical variable". (SMUELLER)
