document auto-auto indentation
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1714 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Padre.
 
+    Option to always auto-detect indentation style and adapt for each
+        open document. (SMUELLER)
     Default to showing functions in alphabetical order. (SMUELLER)
     Option to show functions in alphabetical order, except private methods
         go last. (SMUELLER)
